--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 *{
-font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+ Sanfont-family: 'Gills', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 
 }
 
